Improve my scripts for ubuntu.